--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+#MySQL
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+jdbc.driverClassName =com.mysql.jdbc.Driver
+jdbc.url = jdbc:mysql://localhost:3306/sys?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+jdbc.username = root
+jdbc.password = root
+
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+hibernate.hbm2ddl-auto = update
